--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1, initial-scale=1.0">
-    <title>Title</title>
+    <title>Count Down Timer</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>This is Base structure for html page</h1>
+    <h1 class="pgHeaderText">New Years Evening</h1>
+
+    <div class="baseContainer">
+        <div class="dayCount tcount">
+            <p class="largeTxt" id="days">0</p>
+            <span>Days</span>
+        </div>
+
+        <div class="hoursCount tcount">
+            <p class="largeTxt" id="hours">0</p>
+            <span>Hours</span>
+        </div>
+
+        <div class="minsCount tcount">
+            <p class="largeTxt" id="mins">0</p>
+            <span>mins</span>
+        </div>
+
+        <div class="secCount tcount">
+            <p class="largeTxt" id="second">0</p>
+            <span>sec</span>
+        </div>
+
+        <!-- <div class="monthCount tcount">
+            <p class="largeTxt" id="hours">10</p>
+            <span>Days</span>
+        </div> -->
+
+    </div>
 
      <script src="./index.js"></script>
 </body>
